# projects

./: .gitignore  README.md  git_links.txt  index.html  params.json
Programs/: .Makefile.swp  HOWTO.txt  HOWTO.txt~  Makefile  Makefile~
college/ideias/: super-projetos.cc
college/particular/private_linked_projects/UnBeatables/UnBeatables/Testes/behaviorTeste/behavior/: CMakeLists.txt  behavior  buidFile.sh  createBehavior.py  main.cpp  teste  teste.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/Testes/behaviorTeste/behavior/include/: BehaviorBase.hpp  BehaviorChildOne.hpp  BehaviorChildTwo.hpp  ClasseMaior.hpp  ClasseMenor.hpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/Testes/behaviorTeste/behavior/src/: BehaviorChildOne.cpp  BehaviorChildTwo.cpp  ClasseMaior.cpp  ClasseMenor.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/Testes/behaviorTeste/behavior/templates/: tempBehaviorClass.cpp  tempBehaviorClass.hpp  tempCMakeLists.txt  tempincludeMapBehavior.hpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/behavior/: CMakeLists.txt  createBehavior.py  main.cpp  qiproject.xml  sendToNAO.sh
college/particular/private_linked_projects/UnBeatables/UnBeatables/behavior/include/: Align.hpp  BehaviorBase.hpp  GmCtrlFinished.hpp  GmCtrlInitial.hpp  GmCtrlPenalized.hpp  GmCtrlPlaying.hpp  GmCtrlReady.hpp  GmCtrlSet.hpp  Kick.hpp  LookForBall.hpp  ReadyMachine.hpp  Sonar.hpp  Start.hpp  behavior.hpp  deadStiffness.hpp  getUpBack.hpp  getUpFront.hpp  includeMapBehavior.hpp  newWalk.hpp  refPickup.hpp  searchForBall.hpp  seekBall.hpp  sonarLeft.hpp  sonarMiddle.hpp  sonarRight.hpp  stayStill.hpp  turnLeft.hpp  turnRight.hpp  turnToBall.hpp  vira90.hpp  walk.hpp  walkToBall.hpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/behavior/src/: Align.cpp  BehaviorBase.cpp  GmCtrlFinished.cpp  GmCtrlInitial.cpp  GmCtrlPenalized.cpp  GmCtrlPlaying.cpp  GmCtrlReady.cpp  GmCtrlSet.cpp  Kick.cpp  LookForBall.cpp  ReadyMachine.cpp  Sonar.cpp  Start.cpp  behavior.cpp  deadStiffness.cpp  getUpBack.cpp  getUpFront.cpp  matador.cpp  newWalk.cpp  refPickup.cpp  searchForBall.cpp  seekBall.cpp  sonarLeft.cpp  sonarMiddle.cpp  sonarRight.cpp  stayStill.cpp  turnLeft.cpp  turnRight.cpp  turnToBall.cpp  vira90.cpp  walk.cpp  walkToBall.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/behavior/templates/: tempBehaviorClass.cpp  tempBehaviorClass.hpp  tempCMakeLists.txt  tempincludeMapBehavior.hpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/motion/: CMakeLists.txt  motionClient.cpp  qiproject.xml  sendToNAO.sh
college/particular/private_linked_projects/UnBeatables/UnBeatables/motion/include/: motion.hpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/motion/src/: motion.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/: CMakeLists.txt  Doxyfile  Makefile  main.cc  qiproject.xml  sendToNAO.sh  visionClient.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/build-atom/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/build-atom/cmake/sdk/: vision-config.cmake
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/build-atom/sdk/cmake/: vision-config.cmake
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/build-atom/sdk/share/qi/: path.conf
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/content/: ball_cascade.xml  enemie_cascade.xml  unbeatables_model.uxf
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/content/auxiliar/: Makefile  trackColor  trackColor.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/content/auxiliar/include/: core.hpp  headers.hpp  track.hpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/content/auxiliar/src/: core.cpp  track.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/include/: Ball.h  Center.h  Corner.h  DynamicInFieldEntity.h  Enemie.h  FieldEntity.h  Goal.h  InFieldDetection.h  InLine.h  Post.h  StaticInFieldEntity.h  localization.hpp  vision.hpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/include/container/: LinesContainer.h
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/include/namespace/: common.h  image.h  lines.h
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/src/: Ball.cc  Center.cc  Corner.cc  DynamicInFieldEntity.cc  Enemie.cc  FieldEntity.cc  Goal.cc  InFieldDetection.cc  InLine.cc  Post.cc  StaticInfieldEntity.cc  localization.cc  naoqi_module_loader.cpp  vision.cpp  vision_implementation.cpp
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/src/container/: LinesContainer.cc
college/particular/private_linked_projects/UnBeatables/UnBeatables/vision/src/namespace/: contours.cc  image.cc  lines.cc  ml.cc
concurso/: atalhos_para_editais.cc  banca_principais_concursos.cc  estrategia.cc  estudo_focado_em.cc  melhores_concursos.cc
concurso/EDITAIS/: conteudo_edital.cc
concurso/EDITAIS ATUAIS/: rastreio.cc
concurso/ESTUDOS DE TI/: banco_de_dados.cc  engenharia_e_desenvolvimento_de_software.cc  governanca.cc  governança_e_gestao_de_ti.cc  sistemas_de_apoio_a_decisao.cc
concurso/zESTUDO/: [2014PauloNader] Introducao ao Estudo do Direito.cc
investimento/: antes_de_investir.cc  geral.cc  impostos.cc  juros.cc
investimento/renda fixa/: geral.cc  tesouro_direto.cc
software_tutorials/: R.R  git_submodules.cc  ros.cc  ros_code.cc  ros_intermediate.cc
tcc/monograph/: acompanhamento_tcc.cc  questions.cc  tips_helper_writing.cc
undergraduate/: HOWTO.txt
undergraduate/computer_basics/: 130111350_01  130111350_02
undergraduate/law_notions/: nd.cc  nd_2.cc
undergraduate/tcu_tutorials/: docker_tutorial_2.cc  kubernetes.cc
(+4578 files in other folders)
